--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 
-<h1>It works!</h1>
+<h1>Beetroot <itag>(Beta vulgaris)</itag></h1>
+
+<fig>
+<img src="http://upload.wikimedia.org/wikipedia/commons/2/21/Beets-Bundle.jpg">
+
 
 </body>
 </html>
