Updated h1, fig, and p

--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
 </head>
 <body>
 
-<h1>Beetroot <itag>(Beta vulgaris)</itag></h1>
+<h1>Beetroot <i>(Beta vulgaris)</i></h1>
 
 <fig>
-<img src="http://upload.wikimedia.org/wikipedia/commons/2/21/Beets-Bundle.jpg">
+	<img src="images/beets-bundle.jpg" alt="Beetroot">
+	<figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
+</fig>
+
+<p>55 to 65 days are needed from germination to harvest of the root.</p>
 
 
 </body>
