Completed main, opened aside

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<meta charset="utf-8">
 	<title></title>
 </head>
-<body>
 
+<body>
+<main>
 <h1>Beetroot <i>(Beta vulgaris)</i></h1>
 
 <fig>
@@ -15,6 +16,11 @@
 
 <p>55 to 65 days are needed from germination to harvest of the root.</p>
 
+<p>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
+</main>
 
+<aside>
+	
+</aside>
 </body>
 </html>
