Added ordered list and data list

--- a/index.html
+++ b/index.html
@@ -30,12 +30,32 @@
 	<footer>
 		— <cite>Chris Pratt</cite>
 	</footer>
-
 </blockquote>
 </main>
 
 <aside>
-	
+<h2>Common varieties</h2>
+
+<ol>
+	<li>Albino</li>
+	<li>Bull's Blood</li>
+	<li>Chioggia</li>
+	<li>Detroit Dark Red</li>
+	<li>Early Wonder</li>
+</ol>	
+
+<h2>Nutritional information</h2>
+
+<p>Serving size: 100 g</p>
+
+<dl>
+	<dt>Energy</dt><dd><data>180 KJ</data></dd>
+	<dt>Carbohydrates</dt><dd><data>9.96 g</data></dd>
+	<dt>Fat</dt><dd><data>0.18 g</data></dd>
+	<dt>Protein</dt><dd><data>1.68 g></dd>
+</dl>
+
+<dl></dl>
 </aside>
 </body>
 </html>
