--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Beetroot <i>(Beta vulgaris)</i></h1>
 
 <fig>
-	<img src="beets-bundle.jpg" alt="Beetroot">
+	<img src="beetroot.jpg" alt="Beetroot">
 	<figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
 </fig>
 
