Corrected some syntax errors

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <h1>Beetroot <i>(Beta vulgaris)</i></h1>
 
-<fig>
+<figure>
 	<img src="images/beetroot.jpg" alt="Beetroot">
 	<figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
-</fig>
+</figure>
 
 <p>55 to 65 days are needed from germination to harvest of the root.</p>
 
@@ -57,7 +57,7 @@
 	<dt>Energy</dt><dd><data>180 KJ</data></dd>
 	<dt>Carbohydrates</dt><dd><data>9.96 g</data></dd>
 	<dt>Fat</dt><dd><data>0.18 g</data></dd>
-	<dt>Protein</dt><dd><data>1.68 g</dd>
+	<dt>Protein</dt><dd><data>1.68 g</data></dd>
 </dl>
 
 <footer>
